--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "node build.js",
   "outputDirectory": ".",
-  "installCommand": "echo 'No dependencies to install'"
+  "installCommand": "echo 'No dependencies to install'",
+  "framework": null
 }
