feat: replace visitors counter file-based approach by vercel's key-value database

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "node build.js",
     "dev": "node build.js && echo 'Build completed for development'"
   },
+  "dependencies": {
+    "@vercel/kv": "^1.0.0"
+  },
   "keywords": [
     "wedding",
     "gifts",
