refactor: change vercel KV database by upstash Redis

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,3 @@
-# Environment Variables Sample
-# Copy this file to .env and fill in your actual payment links
-
-# Payment Links for Gifts (replace with your actual links)
 GIFT_1_PAYMENT_LINK=https://your-payment-link-1.com
 GIFT_2_PAYMENT_LINK=https://your-payment-link-2.com
 GIFT_3_PAYMENT_LINK=https://your-payment-link-3.com
@@ -33,7 +29,8 @@ GIFT_28_PAYMENT_LINK=https://your-payment-link-28.com
 GIFT_29_PAYMENT_LINK=https://your-payment-link-29.com
 GIFT_30_PAYMENT_LINK=https://your-payment-link-30.com
 
-# Instructions:
-# 1. Copy this file to .env: cp env-sample.txt .env
-# 2. Replace the placeholder URLs with your actual payment links
-# 3. For Vercel deployment, add these as environment variables in the dashboard 
+KV_URL=
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
+KV_REST_API_READ_ONLY_TOKEN=
+REDIS_URL=
