--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Environment variables
 .env
 
+# Dependencies
+node_modules/
+
 # Build artifacts (will be generated during deployment)
 script.js.bak
 build.log
