--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,9 @@
+FAMILIES_FILE="./families.txt"
+URL_PREFIX=http://127.0.0.1:3000/index.html
+SHARED_SECRET='db9934a62a8a09a4c92a8fac3b7808b6'
+EVENT_DETAILS_LINK=
+RSVP_LINK=
+
 GIFT_1_PAYMENT_LINK=https://your-payment-link-1.com
 GIFT_2_PAYMENT_LINK=https://your-payment-link-2.com
 GIFT_3_PAYMENT_LINK=https://your-payment-link-3.com
