--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "build": "node build.js",
-    "dev": "node build.js && echo 'Build completed for development'"
+    "serve": "python3 -m http.server 3000 || python -m http.server 3000 || npx serve . -p 3000"
   },
   "dependencies": {
     "@upstash/redis": "^1.28.4"
