--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "serve": "python3 -m http.server 3000 || python -m http.server 3000 || npx serve . -p 3000"
   },
   "dependencies": {
-    "@upstash/redis": "^1.28.4",
-    "@vercel/og": "^0.6.2"
+    "@upstash/redis": "^1.28.4"
   },
   "keywords": [
     "wedding",
